# rcore-tutorial-v3-with-hal-component

./: .gitignore  Cargo.toml  Makefile  methods_for_ch3_on_polyhal.md  rust-toolchain.toml
.github/workflows/: doc-and-test.yml  test-run.yml
easy-fs-fuse/: Cargo.toml
easy-fs-fuse/src/: main.rs
easy-fs/src/: efs.rs
os/: .gitignore  Cargo.toml  Makefile  build.rs  linker.lds
os/.cargo/: config  config.toml
os/.fleet/: settings.json
os/src/: config.rs  console.rs  frame_allocater.rs  heap_allocator.rs  lang_items.rs  linker-aarch64.ld  linker-loongarch64.ld  linker-x86_64.ld  loader.rs  logging.rs  main.rs  timer.rs
os/src/boards/: qemu.rs
os/src/drivers/block/: mod.rs  ram_blk.rs  virtio_blk.rs
os/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs  vpn_range.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  sync.rs  thread.rs
os/src/task/: id.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  switch.rs  task.rs
user/: Makefile  build.py  build.rs
user/.cargo/: config
user/src/: lang_items.rs  lib.rs  linker.ld  syscall.rs
