[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
# polyhal = { git = "https://github.com/chyyuu/polyhal.git", rev = "7fc31a8", features = ["kcontext"]}
# polyhal = { git = "https://github.com/Byte-OS/polyhal.git", rev = "58c6e72", features = ["kcontext"]}
polyhal = { git = "https://github.com/Byte-OS/polyhal.git", features = ["kcontext"]}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "61ece50" }
easyfs = "0.1"
log = "0.4"
fdt = "0.1.5"

[profile.release]
debug = true

[workspace]
members = [
    ".",
]
