[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyhal = { version = "0.3.2", features = ["trap"] }
polyhal-boot = { version = "0.3.2" }
polyhal-trap = { version = "0.3.2" }
lazyinit = "0.2.1"

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.11.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "61ece50" }
easyfs = "0.1"
log = "0.4"
fdt = "0.1.5"

[profile.release]
debug = true
